--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-auth": "5.0.0-beta.25",
     "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
