--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-auth": "5.0.0-beta.25",
     "prisma": "^5.21.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
