--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
