--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
+    "monaco-editor": "^0.52.0",
     "next": "14.2.15",
     "next-auth": "5.0.0-beta.25",
     "prisma": "^5.21.1",
@@ -28,6 +29,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-resizable-panels": "^2.1.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
